clusters/homelab/flux-system/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-operator-web-ingress
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flux-operator
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9080"
              protocol: TCP
            - port: "8080"
              protocol: TCP
